fix scrollbar always showing up bug

--- a/src/app/setup-wizard/setup-wizard-help-panel/setup-wizard-help-panel.component.css
+++ b/src/app/setup-wizard/setup-wizard-help-panel/setup-wizard-help-panel.component.css
@@ -1,7 +1,7 @@
 .navbar{
     width: 20rem;
     background-color: #ffffff;
-    overflow-y: scroll;
+    overflow-y: auto;
     /* height: 100%; */
     /* max-height: 100%; */
     flex-wrap: nowrap;
